--- a/src/.env_sample
+++ b/src/.env_sample
@@ -1,4 +1,4 @@
-TWITTER_CONSUMER_KEY=''
-TWITTER_CONSUMER_SECRET=''
-TWITTER_ACCESS_TOKEN=''
-TWITTER_ACCESS_TOKEN_SECRET=''
+CONSUMER_KEY=''
+CONSUMER_SECRET=''
+ACCESS_TOKEN=''
+ACCESS_TOKEN_SECRET=''
